# doc-embedder

./: README.md  pyproject.toml
doc_embedder/web_embedder/: chip_huyen_blog_embedder.py
