[project]
name = "doc-embedder"
version = "0.1.0"
description = ""
authors = [
    {name = "shivanshuy",email = "shivanshuy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "langchain (>=0.3.21,<0.4.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "langchain-core (>=0.3.49,<0.4.0)",
    "pydantic (>=2.11.0,<3.0.0)",
    "chromadb (>=1.0.20,<2.0.0)",
    "selenium (>=4.35.0,<5.0.0)",
    "unstructured (>=0.18.14,<0.19.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.5,<3.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "langchain-chroma (>=0.2.5,<0.3.0)",
    "torchvision (>=0.23.0,<0.24.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
